# OWAPI

./: .gitignore  CONTRIBUTORS  LICENCE  Pipfile  README.md  api.md  config.example.yml  config.yml  config_noredis.yaml  pyproject.toml  rates.default.yml  requirements.txt
.github/: ISSUE_TEMPLATE.md
owapi/: app.py  blizz_interface.py  interface.py  mo_interface.py  parsing.py  prestige.py  routes.py  util.py
owapi/v2/: routes.py
owapi/v3/: __init__.py  parsing.py  v3_util.py
typings/: example.ts  index.d.ts
